syntax="proto3";

package proto;

option go_package="/proto";

// Data Contracts
message AddRequest{
    int64 x=1;
    int64 y=2;
}

message AddResponse{
    int64 result=1;
}

// server streaming
message PrimeRequest {
    int64 start=1;
    int64 end=2;
}

message PrimeResponse{
    int64 primeNo=1;
}

// Client Streaming
message AverageRequest{
    int64 no=1;
}

message AverageResponse{
    float average=1;
}

// Service Contract
service AppService {

    // Operation Contracts

    // Request & Response 
    rpc Add (AddRequest) returns (AddResponse);

    // Server streaming
    rpc GeneratePrimes (PrimeRequest) returns (stream PrimeResponse);

    // Client streaming
    rpc CalculateAverage (stream AverageRequest) returns (AverageResponse);
}